fixed z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,8 @@ main {
     main .dishes .dish-photo {
       grid-column: span 3;
       float: left;
-      text-align: center; }
+      text-align: center;
+      z-index: 5; }
     main .dishes .dish-photo img {
       margin: .5rem 0;
       width: 100%;
@@ -284,7 +285,7 @@ main {
       font-size: 1rem;
       padding: 2% 0; }
     main .dishes .dish-spicy {
-      margin: 2%; }
+      margin: 2% auto 2% 5%; }
     main .dishes .dish-price {
       position: relative;
       float: right;
