--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -216,6 +216,7 @@ main{
         display:grid;
         grid-template-columns: repeat(12,1fr);  width: 100%;     
         font-weight: $normalWeight;
+        
         background-color: darken($secondaryColor,10%);
         padding: $gutter;
         box-shadow:  3px 3px 3px rgba(0, 0, 0, .1);
@@ -225,6 +226,7 @@ main{
             grid-column: span 3;
             float:left;
             text-align: center;
+            z-index: 5;
         }
 
         .dish-photo img{
@@ -254,7 +256,7 @@ main{
             padding: 2% 0;
         }
         .dish-spicy{
-            margin: 2%;
+            margin: 2% auto 2% 5%;
         }
         .dish-price{
             position: relative;
